[project]
requires-python = ">=3.12"
dependencies = ["awscrt", "paho-mqtt", "setuptools", "click", "pyyaml"]
name = "campbell-control"
version = "0.2.1"
description = "A python package for controlling Campbell dataloggers over MQTT"

[project.scripts]
mqtt-control = "campbellcontrol.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "parameterized"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
lint = ["ruff"]
dev = ["campbell-control[test,docs,lint]"]

[tool.pytest.ini_options]
addopts = "-m 'not hardware' --cov=campbellcontrol --cov=mqttconfig --cov-report=term-missing"
markers = ["hardware: Tests that require a logger connected"]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
omit = ["*__init__.py"]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py", "tests/**.py"]
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "A",
    "PLC",
    "PLE",
    "PLW",
    "I",
    "N816",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]
exclude = ["tests/**.py"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.doc8]
ignore = ["D004", "D001"]
max_line_length = 130
